[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/heroes/baloon.png" type="Texture" id=1]
[ext_resource path="res://asset/tags/fritto.png" type="Texture" id=2]
[ext_resource path="res://asset/tags/insalata.png" type="Texture" id=3]
[ext_resource path="res://asset/tags/carne.png" type="Texture" id=4]
[ext_resource path="res://scenes/UI/dish_baloon.gd" type="Script" id=5]

[node name="DishBaloon" type="Node2D"]
visible = false
z_index = 4
script = ExtResource( 5 )

[node name="Baloon" type="TextureRect" parent="."]
margin_right = 96.0
margin_bottom = 32.0
rect_rotation = -90.0
texture = ExtResource( 1 )

[node name="MainTexture" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = -112.0
margin_right = 34.0
margin_bottom = -48.0
texture = ExtResource( 4 )

[node name="CookingTexture" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = -62.0
margin_right = 33.0
margin_bottom = -30.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="SideTexture" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = -60.0
margin_right = 29.0
margin_bottom = 4.0
texture = ExtResource( 3 )
